--- a/index.html
+++ b/index.html
@@ -3,132 +3,200 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AutoForgeSystem</title>
+  <title>AutoForgeSystem | Business AI Integration</title>
   <link rel="stylesheet" href="styles.css" />
-
-<style>
-  .chat-float {
-    position: fixed;
-    bottom: 20px;   /* Distance from the bottom */
-    right: 20px;    /* Distance from the right */
-    z-index: 1000;  /* Ensures it stays on top */
-    padding: 12px 16px;
-    background-color: #0078D4;
-    color: white;
-    border: none;
-    border-radius: 50px;
-    font-size: 16px;
-    cursor: pointer;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-  }
-
-  .chat-float:hover {
-    background-color: #005a9e;
-  }
-</style>
-
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: #0f1c2e;
+      color: #fff;
+    }
+    header {
+      background: #1e2f47;
+      padding: 1rem 2rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    .logo {
+      display: flex;
+      align-items: center;
+    }
+    .logo img {
+      height: 40px;
+      margin-right: 10px;
+    }
+    nav a {
+      color: #fff;
+      margin-left: 20px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .hero {
+      text-align: center;
+      padding: 4rem 2rem;
+      background: linear-gradient(to right, #1e2f47, #2a3f5f);
+    }
+    .hero h1 {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+    }
+    .hero p {
+      font-size: 1.2rem;
+      max-width: 600px;
+      margin: 0 auto;
+    }
+    .features {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      padding: 2rem;
+      background: #16293d;
+    }
+    .feature {
+      background: #223b5c;
+      margin: 1rem;
+      padding: 1.5rem;
+      border-radius: 8px;
+      max-width: 300px;
+      text-align: center;
+    }
+    .feature h3 {
+      margin-bottom: 0.5rem;
+    }
+    footer {
+      background: #1e2f47;
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+    }
+  </style>
+   
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
-
-<div id="chat-panel">
-  <div id="chat-header">🤖 AutoForgeSystem AI Agent</div>
-  <div id="chat-messages"></div>
-  <form id="chat-form">
-    <input type="text" id="chat-input" placeholder="Type your message..." autocomplete="off" />
-    <button type="submit">Send</button>
-  </form>
-</div>
-
 <body>
   <header>
-    <h1>AutoForgeSystem</h1>
-    <p>Automation with Personality</p>
+    <div class="logo">
+      <img src="autoforgesystem_logo.png" alt="AutoForgeSystem Logo" />
+      <h2>AutoForgeSystem</h2>
+    </div>
     <nav>
-      <ul>
-        <li><a href="#services">What We Do</a></li>
-        <li><a href="#solutions">Solutions</a></li>
-        <li><a href="#tech">Tech Stack</a></li>
-        <li><a href="#contact">Contact</a></li>
-          </ul>
+      <a href="#features">Features</a>
+      <a href="#contact">Contact</a>
     </nav>
   </header>
 
-  <section id="hero">
-    <h2>Scalable Automation. Branded Delivery.</h2>
-    <p>Deploy bots, workflows, and diagnostics with public-facing polish.</p>
-    <a href="#contact" class="cta-button">Schedule a Demo</a>
+  <section class="hero">
+    <h1>Deploy AI Bots to Study Your Business</h1>
+    <p>AutoForgeSystem helps you integrate intelligent automation into your workflows. From customer interaction to data analysis, our AI bots adapt to your business needs.</p>
   </section>
 
-  <section id="services">
-    <h2>What We Do</h2>
-    <ul>
-      <li>Multi-channel bots: Telegram, WhatsApp, Messenger</li>
-      <li>AI Agents with n8n and Hugging Face</li>
-      <li>Branded UI and fallback logic</li>
-    </ul>
-  </section>
-
-  <section id="solutions">
-    <h2>Solutions</h2>
-    <div class="grid">
-      <div>
-        <h3>For Businesses</h3>
-        <p>Order alerts, branded emails, customer support bots</p>
-      </div>
-      <div>
-        <h3>For Developers</h3>
-        <p>Diagnostic blocks, API scaffolds, binary-safe flows</p>
-      </div>
-      <div>
-        <h3>For Creatives</h3>
-        <p>Asset editing, social automation, voice transcription</p>
-      </div>
+  <section class="features" id="features">
+    <div class="feature">
+      <h3>🔍 Business Analysis</h3>
+      <p>AI bots analyze your operations and uncover optimization opportunities.</p>
+    </div>
+    <div class="feature">
+      <h3>🤖 Bot Deployment</h3>
+      <p>Deploy Messenger, Telegram, or WhatsApp bots tailored to your brand.</p>
+    </div>
+    <div class="feature">
+      <h3>📊 Workflow Automation</h3>
+      <p>Automate repetitive tasks and streamline communication across platforms.</p>
+    </div>
+    <div class="feature">
+      <h3>🧠 AI Strategy Consulting</h3>
+      <p>Get expert guidance on integrating AI into your business model.</p>
     </div>
   </section>
 
-  <section id="tech">
-    <h2>Tech Stack</h2>
-    <p>Docker, PowerShell, Python, ffmpeg, OpenSSL, Google Apps Script</p>
-  </section>
+  <section id="contact-form" class="contact-section">
+  <h2>Contact Us</h2>
+  <p>Email: <a href="mailto:autoforgesystem@gmail.com">autoforgesystem@gmail.com</a></p>
+  <p>Telegram: <a href="https://t.me/autoforgesystembot" target="_blank">@autoforgesystembot</a></p>
 
-  <section id="contact">
-    <h2>Contact Us</h2>
-    <p>Email: autoforgesystem@gmail.com</p>
-    <p>Telegram: @autoforgesystembot</p>
-    <form>
-      <input type="text" placeholder="Your Name" required />
-      <input type="email" placeholder="Your Email" required />
-      <textarea placeholder="Your Message" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
-  </section>
+  <form onsubmit="submitContactForm(event)">
+    <input type="text" id="contact-name" placeholder="Your Name" required />
+    <input type="email" id="contact-email" placeholder="Your Email" required />
+    <textarea id="contact-message" placeholder="Your Message" rows="5" required></textarea>
+    <button type="submit">Send Message</button>
+  </form>
+</section>
 
-  <footer>
+ <footer id="contact">
   <p>© 2025 AutoForgeSystem. All rights reserved.</p>
-  <div class="social-links">
+  <div class="social-icons">
     <a href="https://www.youtube.com/@AutoForgeSystem" target="_blank" aria-label="YouTube">
-      <img src="Youtube.svg" alt="YouTube" />
+      <img src="Youtube_Logo.svg" alt="YouTube" />
     </a>
     <a href="https://www.facebook.com/people/Auto-Forge-System/61582314452308/" target="_blank" aria-label="Facebook">
-      <img src="Facebook.svg" alt="Facebook" />
+      <img src="Facebook_Logo.svg" alt="Facebook" />
     </a>
     <a href="https://t.me/autoforgesystembot" target="_blank" aria-label="Telegram">
-      <img src="Telegram.svg" alt="Telegram" />
+      <img src="Telegram_Logo.svg" alt="Telegram" />
     </a>
   </div>
 </footer>
 
-<button id="toggle-chat" class="chat-float">🤖 AI Agent</button>
+<!-- Floating Chat Toggle Button -->
+<div id="chat-toggle" onclick="toggleChatPanel()">
+  🤖 AI Agent
+</div>
 
-</body>
+<!-- Floating Chat Panel -->
+<div id="chat-panel">
+  <div class="chat-header">
+    <span>AutoForgeSystem AI Agent</span>
+    <button onclick="toggleChatPanel()">×</button>
+  </div>
+  <div class="chat-body">
+  <div id="chat-messages">
+    <!-- Messages will be appended here -->
+  </div>
+  <div class="chat-input">
+    <input type="text" id="user-message" placeholder="Type your message..." />
+    <button onclick="sendMessage()">Send</button>
+  </div>
+</div>
+ 
+</div>
+</div>
+
 <script>
-  const toggleButton = document.getElementById('toggle-chat');
-  const chatPanel = document.getElementById('chat-panel');
+  function toggleChatPanel() {
+    const panel = document.getElementById('chat-panel');
+    panel.style.display = panel.style.display === 'flex' ? 'none' : 'flex';
+  }
 
-  toggleButton.addEventListener('click', () => {
-    chatPanel.style.display = chatPanel.style.display === 'none' ? 'block' : 'none';
-  });
+  function sendMessage() {
+    const input = document.getElementById('user-message');
+    const message = input.value.trim();
+    if (message) {
+      const chatBox = document.getElementById('chat-messages');
+
+      // User message
+      const userBubble = document.createElement('div');
+      userBubble.className = 'message user-message';
+      userBubble.textContent = message;
+      chatBox.appendChild(userBubble);
+
+      // Simulated bot reply (replace with webhook or iframe logic)
+      const botBubble = document.createElement('div');
+      botBubble.className = 'message bot-message';
+      botBubble.textContent = generateBotReply(message);
+      chatBox.appendChild(botBubble);
+
+      input.value = '';
+      chatBox.scrollTop = chatBox.scrollHeight;
+    }
+  }
+
+  function generateBotReply(userText) {
+    // Placeholder logic — replace with real AI response
+    return "Thanks for your message! We'll analyze your business needs shortly.";
+  }
 </script>
 
-
-
+</body>
 </html>
