--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>AutoForgeSystem | Business AI Integration</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
+
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
@@ -72,6 +73,7 @@
       font-size: 0.9rem;
     }
   </style>
+
    
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
@@ -88,7 +90,7 @@
   </header>
 
   <section class="hero">
-    <h1>Deploy AI Bots to Study Your Business</h1>
+    <h1>AI That Understands Your Brand Blueprint</h1>
     <p>AutoForgeSystem helps you integrate intelligent automation into your workflows. From customer interaction to data analysis, our AI bots adapt to your business needs.</p>
   </section>
 
@@ -197,6 +199,8 @@
     return "Thanks for your message! We'll analyze your business needs shortly.";
   }
 </script>
+
+
 
 </body>
 </html>
