--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
       margin-left: 20px;
       text-decoration: none;
       font-weight: bold;
-    }
     .hero {
       text-align: center;
-      padding: 4rem 2rem;
-      background: linear-gradient(to right, #1e2f47, #2a3f5f);
+      padding: 2rem 2rem 1rem 2rem;
+      background-image: url('background.png');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      color: #fff;
     }
     .hero h1 {
       font-size: 2.5rem;
