--- a/index.html
+++ b/index.html
@@ -33,15 +33,20 @@
       margin-left: 20px;
       text-decoration: none;
       font-weight: bold;
+
+    }
     .hero {
       text-align: center;
       padding: 2rem 2rem 1rem 2rem;
-      background-image: url('background.png');
+      background-image: url('background.jpg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
       color: #fff;
     }
+
+  
+
     .hero h1 {
       font-size: 2.5rem;
       margin-bottom: 1rem;
