--- a/index.html
+++ b/index.html
@@ -40,18 +40,17 @@
       padding: 2rem 2rem 1rem 2rem;
       background-image: url('background.jpg');
       background-size: cover;
-      background-position: center;
+      background-position: relative;
       background-repeat: no-repeat;
       color: #fff;
     }
-
-  
-
     .hero h1 {
       font-size: 2.5rem;
       margin-bottom: 1rem;
+
     }
     .hero p {
+
       font-size: 1.2rem;
       max-width: 600px;
       margin: 0 auto;
@@ -92,16 +91,17 @@
       <img src="autoforgesystem_logo.png" alt="AutoForgeSystem Logo" />
       <h2>AutoForgeSystem</h2>
     </div>
-    <nav>
-      <a href="#features">Features</a>
-      <a href="#contact">Contact</a>
-    </nav>
+   
   </header>
 
   <section class="hero">
+  <div class="hero-overlay">
+    <h1><br></h1>
     <h1>AI That Understands Your Brand Blueprint</h1>
     <p>AutoForgeSystem helps you integrate intelligent automation into your workflows. From customer interaction to data analysis, our AI bots adapt to your business needs.</p>
-  </section>
+  </div>
+</section>
+
 
   <section class="features" id="features">
   <a href="business_analysis.html" class="feature" style="text-decoration: none; color: inherit;">
