--- a/index.html
+++ b/index.html
@@ -136,7 +136,6 @@
   <textarea id="contact-message" placeholder="Your Message" rows="5" required></textarea>
   <button type="submit">Send Message</button>
 </form>
-
 </section>
 
  <footer id="contact">
@@ -233,7 +232,42 @@
   }
 </script>
 
+<script>
+document.getElementById("contactForm").addEventListener("submit", function(e) {
+  e.preventDefault();
 
+  const name = document.getElementById("contact-name").value;
+  const email = document.getElementById("contact-email").value;
+  const message = document.getElementById("contact-message").value;
+
+  const payload = {
+    name: name,
+    email: email,
+    message: message,
+    sessionId: Date.now().toString()
+  };
+
+  fetch('https://n8n-yawon.onrender.com/webhook/19c213cc-63fa-4d76-a9b5-8a6b720be8fb', {
+    method: "POST",
+    headers: {
+      "Content-Type": "application/json"
+    },
+    body: JSON.stringify(payload)
+  })
+  .then(response => {
+    if (response.ok) {
+      alert("Message sent successfully!");
+      document.getElementById("contactForm").reset();
+    } else {
+      alert("Failed to send message.");
+    }
+  })
+  .catch(error => {
+    console.error("Error:", error);
+    alert("Error sending message.");
+  });
+});
+</script>
 
 
 </body>
