--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body>
+
+<div id="loading-overlay" class="loading-modal">
+  <div class="spinner"></div>
+  <p>Sending message...</p>
+</div>
+
   <header>
     <div class="logo">
       <img src="autoforgesystem_logo.png" alt="AutoForgeSystem Logo" />
@@ -203,7 +209,8 @@
       },
       body: JSON.stringify({
         message: message,
-        sessionId: Date.now().toString()
+        sessionId: Date.now().toString(),
+        message1: "chatbox"
       })
     })
     .then(response => response.json())
@@ -244,8 +251,12 @@ document.getElementById("contactForm").addEventListener("submit", function(e) {
     name: name,
     email: email,
     message: message,
+    message1: "contact_form",
     sessionId: Date.now().toString()
   };
+
+  const overlay = document.getElementById("loading-overlay");
+  overlay.style.display = "block";
 
   fetch('https://n8n-yawon.onrender.com/webhook/19c213cc-63fa-4d76-a9b5-8a6b720be8fb', {
     method: "POST",
@@ -255,18 +266,33 @@ document.getElementById("contactForm").addEventListener("submit", function(e) {
     body: JSON.stringify(payload)
   })
   .then(response => {
+    overlay.style.display = "none";
     if (response.ok) {
-      alert("Message sent successfully!");
+      showSuccessModal("Message sent successfully!");
       document.getElementById("contactForm").reset();
     } else {
-      alert("Failed to send message.");
+      showSuccessModal("Failed to send message.");
     }
   })
   .catch(error => {
     console.error("Error:", error);
-    alert("Error sending message.");
+    overlay.style.display = "none";
+    showSuccessModal("Error sending message.");
   });
 });
+
+// Optional: Custom modal for success message
+function showSuccessModal(text) {
+  const modal = document.createElement("div");
+  modal.className = "loading-modal";
+  modal.innerHTML = `<p>${text}</p>`;
+  document.body.appendChild(modal);
+  modal.style.display = "block";
+  setTimeout(() => {
+    modal.style.display = "none";
+    document.body.removeChild(modal);
+  }, 2000);
+}
 </script>
 
 
